@@ -40,7 +40,7 @@
   N_CONT = "_" %{ list_continue = 1; };
   N_NUM = digit+ >A %{ STORE(start) };
   N = ( N_CONT | N_NUM )? ;
-  PUNCT = ( "!" | '"' | "#" | "$" | "%" | "&" | "'" | "," | "-" | "." | "/" | ":" | ";" | "=" | "?" | "\\" | "^" | "`" | "|" | "~" | "[" | "(" | ")" | "<" ) ;
+  PUNCT = ( "!" | '"' | "#" | "$" | "%" | "&" | "'" | "," | "-" | "." | "/" | ":" | ";" | "=" | "?" | "\\" | "^" | "`" | "|" | "~" | "[" | "]" | "(" | ")" | "<" ) ;
   dotspace = ("." " "*) ;
   indent =  [ \t]* ;
   
