@@ -4,6 +4,8 @@
 
 * Fixed missed caps and inline modifiers wrapped in parentheses. #43, #45
 
+* Removed indication of quotes explicitly with square brackets.  Textile 2.0 does not support this and it wasn't in RedCloth 3. #46
+
 
 *4.0.3 (August 18, 2008)*
 
